[gd_scene load_steps=6 format=3 uid="uid://bn22m1vu5pybt"]

[ext_resource type="Script" path="res://main.gd" id="1_v5ix6"]
[ext_resource type="Script" path="res://free_look_camera.gd" id="2_ack73"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xevka"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_vrnfj"]
sky_material = SubResource("ProceduralSkyMaterial_xevka")

[sub_resource type="Environment" id="Environment_uwobj"]
background_mode = 2
sky = SubResource("Sky_vrnfj")
tonemap_mode = 2
glow_enabled = true

[node name="Node3D" type="Node3D"]
script = ExtResource("1_v5ix6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uwobj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Open"

[node name="FileDialog" type="FileDialog" parent="Control"]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="ErrorLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CSGBox3D" type="CSGBox3D" parent="."]
size = Vector3(10, 0.1, 10)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.877583, -0.229849, 0.420735, 0, 0.877583, 0.479426, -0.479426, -0.420736, 0.770151, 3.92568, 3.38666, 6.96343)
script = ExtResource("2_ack73")

[connection signal="pressed" from="Control/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="_on_file_dialog_file_selected"]
